--- a/modulo1/projeto-portfolio/index.css
+++ b/modulo1/projeto-portfolio/index.css
@@ -1,19 +1,28 @@
 *{
-    text-align: center;
-   background-color: grey;
+  background-color: gainsboro; 
+   text-align: center;
 }
-
 img{
     height: 280px;
+  
+
 }
 
 nav{
     text-align: auto;
-    border: solid;
   margin: 0px 500px;
-  background-color: aliceblue;
+  background-color: gainsboro;
 }
 a{
-    background-color: aliceblue;
-   
+    background-color: gainsboro;
+    color: rgb(13, 1, 43);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+h1{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+p{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
