--- a/modulo1/css-labetube/video2.css
+++ b/modulo1/css-labetube/video2.css
@@ -9,7 +9,7 @@ header {
     display: grid;
     grid-template-columns: 5fr 1fr;
     background-color: orangered;
-padding: 10px;
+    padding: 10px;
 }
 
 footer {
@@ -21,6 +21,16 @@ div {
 }
 
 video {
-    height: 60%;
-    width: 60%;
+    height: 80%;
+    width: 80%;
+}
+
+@media screen and (min-device-width : 320px) and (max-device-width : 480px) {
+
+    /* celulares */
+    video {
+        height: 10em;
+        width: 15em;
+    }
+
 }
